--- a/package.json
+++ b/package.json
@@ -1,22 +1,54 @@
 {
   "name": "pds_component",
-  "version": "1.0.0",
+  "version": "1.0.14",
   "private": false,
   "description": "组件封装发布npm",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src --out-dir lib"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open",
+    "build": "cross-env NODE_ENV=production npx webpack"
+  },
+  "files": [
+    "src"
+  ],
+  "keywords": [
+    "国际化"
+  ],
+  "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.17.2",
+    "@lingui/react": "^2.8.0",
+    "antd": "^3.19.0",
+    "babel-plugin-import": "^1.13.3",
+    "classnames": "^2.2.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.3",
+    "dva": "2.4.1",
+    "echarts": "^4.2.0",
+    "echarts-for-react": "^2.0.15-beta.0",
+    "echarts-gl": "^1.1.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "flv.js": "^1.5.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.28.0",
+    "prop-types": "^15.7.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-perfect-scrollbar": "^1.5.0",
+    "terser-webpack-plugin": "^5.3.3",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "@lingui/react": "^2.8.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "less": "3.9.0",
+    "less-loader": "4.1.0",
+    "style-loader": "^0.21.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
